// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionTray should not render home link if showHome prop is explicitly false 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.searchUrl"
    >
      <SearchIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg"
    />
  </div>
</div>
`;

exports[`ActionTray should not render menu button if showMenu prop is explicitly false 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.homeUrl"
    >
      <HomeIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.searchUrl"
    >
      <SearchIcon
        svgClassName="svg"
      />
    </a>
  </div>
</div>
`;

exports[`ActionTray should not render saved jobs link if showSavedJobs prop is explicitly false 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.homeUrl"
    >
      <HomeIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.searchUrl"
    >
      <SearchIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg"
    />
  </div>
</div>
`;

exports[`ActionTray should not render search link if showSearch prop is explicitly false 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.homeUrl"
    >
      <HomeIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg"
    />
  </div>
</div>
`;

exports[`ActionTray should not render tray if showTray prop is explicitly false 1`] = `""`;

exports[`ActionTray should render with default props 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.homeUrl"
    >
      <HomeIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.searchUrl"
    >
      <SearchIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg"
    />
  </div>
</div>
`;

exports[`ActionTray should render with home tab active 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <HomeIcon
      svgClassName="svg activeActionTrayIcon"
    />
  </div>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.searchUrl"
    >
      <SearchIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg"
    />
  </div>
</div>
`;

exports[`ActionTray should render with login available 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.homeUrl"
    >
      <HomeIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.searchUrl"
    >
      <SearchIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.savedJobsUrl"
    >
      <BookmarkIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg"
    />
  </div>
</div>
`;

exports[`ActionTray should render with menu open 1`] = `
<div
  className="root"
>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HomeIcon
      svgClassName="svg"
    />
  </div>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.searchUrl"
    >
      <SearchIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg activeActionTrayIcon"
    />
  </div>
</div>
`;

exports[`ActionTray should render with saved jobs tab active 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.homeUrl"
    >
      <HomeIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.searchUrl"
    >
      <SearchIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="actionTrayTab"
  >
    <BookmarkIcon
      svgClassName="svg activeActionTrayIcon"
    />
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg"
    />
  </div>
</div>
`;

exports[`ActionTray should render with search tab active 1`] = `
<div
  className="root"
>
  <div
    className="actionTrayTab"
  >
    <a
      className="actionTrayLink"
      href="header.homeUrl"
    >
      <HomeIcon
        svgClassName="svg"
      />
    </a>
  </div>
  <div
    className="actionTrayTab"
  >
    <SearchIcon
      svgClassName="svg activeActionTrayIcon"
    />
  </div>
  <div
    className="menuToggle"
    onClick={[MockFunction]}
  >
    <HamburgerIcon
      svgClassName="svg"
    />
  </div>
</div>
`;
